<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/crear_pelicula_post"
            android:textSize="30sp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/Et_Codigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:counterEnabled="true"
            app:counterMaxLength="15">

            <EditText
                android:id="@+id/e_Codigo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/e_Codigo"
                android:inputType="number"
                android:maxLength="15"
                android:textStyle="bold"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:counterEnabled="true"
            app:counterMaxLength="400">

            <EditText
                android:id="@+id/e_Foto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/e_Foto"
                android:inputType="textUri"
                android:text=""
                android:textStyle="bold" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:counterEnabled="true"
            app:counterMaxLength="35">

            <EditText
                android:id="@+id/e_Titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/e_Titulo"
                android:maxLength="35"
                android:textStyle="bold" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:counterEnabled="true"
            app:counterMaxLength="35">

            <EditText
                android:id="@+id/e_Director"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/e_Director"
                android:maxLength="30"
                android:textStyle="bold" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:counterEnabled="true"
            app:counterMaxLength="15">

            <EditText
                android:id="@+id/e_Precio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/e_Precio"
                android:inputType="numberDecimal"
                android:maxLength="15"
                android:textStyle="bold" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:counterEnabled="true"
            app:counterMaxLength="4">

            <EditText
                android:id="@+id/e_Anio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/e_Anio"
                android:inputType="number"
                android:maxLength="4"
                android:textStyle="bold" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:counterEnabled="true"
            app:counterMaxLength="15">

            <EditText
                android:id="@+id/e_Stock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/e_Stock"
                android:inputType="number"
                android:maxLength="15"
                android:textStyle="bold" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:counterEnabled="true"
            app:counterMaxLength="400">

            <EditText
                android:id="@+id/e_Descripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/e_Descripcion"
                android:inputType="textMultiLine"
                android:maxLength="300"
                android:textStyle="bold" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/b_CrearPelicula"
            android:layout_width="match_parent"
            android:layout_height="70sp"
            android:layout_marginBottom="20dp"
            android:text="@string/B_Crear_Pelicula"
            android:textSize="18sp"
            android:theme="@style/Insertar" />

        <TextView
            android:id="@+id/tv_response"
            android:layout_marginTop="15dp"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>