<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_post"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="12dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:text="@string/introduce_codigo"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:counterEnabled="true"
        app:counterMaxLength="15">

        <EditText
            android:id="@+id/eb_Codigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/eb_Codigo"
            android:inputType="number"
            android:maxLength="15"
            android:textStyle="bold"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/buttonBuscar"
        android:layout_marginTop="18dp"
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:theme="@style/MyButton"
        android:text="@string/buttonBuscar"/>

    <TextView
        android:id="@+id/tv_response_get"
        android:layout_marginTop="15dp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>